--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -167,6 +167,7 @@ ca:
     badges title: "Insígnies"
     currently selected: "S'ha seleccionat:"
     read reference: "Llegeix %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Compara totes les versions"
     link will be added: "Serà afegit/da"
     my picture: "Actualitza la meva foto"
@@ -223,6 +224,7 @@ ca:
     note: "Nova nota"
     selected: "Seleccionat/ada"
     chapter: "Capítol"
+    home: "Inici"
     bible: "La Bíblia"
     notes title: "Notes"
     friends: "Amics"
@@ -1076,6 +1078,19 @@ ca:
         loading: "Carregant més versions..."
         load error: "Ho sentim, hi ha hagut un problema carregant més versions. Tanca aquest menú i intenta tornar-lo a obrir."
     campaigns: 
+        christmas: 
+            tracker title: "La història del Nadal"
+            twitter text: "Mira com el món llegeix sobre el naixement de Jesús. Comparteix el Marcador de la Història del Nadal de YouVersion:https://www.bible.com/christmas"
+            facebook text: "Comparteix el Marcador de la Història del Nadal mentre gent d'arreu del món llegeix sobre el naixement de Jesús.  A l'església o a casa, prop de gent que estimem o durant un moment de silencia tot sol, ens aturem per reflexionar sobre la meravella de l'amor de Déu cap a nosaltres."
+            verse: "<sup>10</sup> Però l’àngel els digué:<br>No tingueu por.  Us anuncio una bona nova que portarà a tot el poble una gran alegria: <sup>11</sup> avui, a la ciutat de David, us ha nascut un salvador, que és el Messies, el Senyor.”"
+            read more: "Llegeix la increïble història del Nadal"
+            read about: "Llegint sobre el naixement de Jesús"
+            totals since: "Número de lectures de YouVersion des de l'1 de desembre de 2014:"
+            total installs: "instal·lacions a smartphones i tauletes"
+            download: "Descarrega l'aplicació de la Bíblia de franc"
+            versions: "Més de %{version_count} versions en %{language_count} idiomes"
+            tagline: "la Bíblia que va amb tu a tot arreu"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: l'aplicació de la Bíblia"
             tagline: "Es comença amb <em>100 milions</em>"
