--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -167,6 +167,7 @@ ja:
     badges title: "バッジ"
     currently selected: "選択されている箇所:"
     read reference: "%{reference} を読む"
+    read chapter: "章全体を読む"
     compare all versions: "全ての版を比較する"
     link will be added: "追加予定"
     my picture: "写真を更新"
@@ -223,6 +224,7 @@ ja:
     note: "新規ノート"
     selected: "選択箇所"
     chapter: "章"
+    home: "ホーム"
     bible: "聖書"
     notes title: "ノート"
     friends: "友だち"
@@ -1074,6 +1076,19 @@ ja:
         loading: "さらに聖書訳を読み込み中・・・"
         load error: "申し訳ございませんが、聖書訳の読み込み中に問題が発生しました。このメニューを一旦閉じて、改めて開いてみてください。"
     campaigns: 
+        christmas: 
+            tracker title: "クリスマスのお話読者"
+            twitter text: "世界中の人々がイエス・キリスト誕生のお話を読んでいるのを見るYouVersion: https://www.bible.com/christmasでクリスマスのお話読者をシェアする"
+            facebook text: "世界中の人々がイエス・キリスト誕生のお話を読むたびにクリスマスのお話読者をシェアします。教会でご自宅で、仲の良いお友達・ご家族とご一緒にまたはおひとりで、神様の愛の素晴らしさを振り返ります"
+            verse: "<sup>10</sup>御使は言った。<br>「恐れるな。見よ、すべての民に与えられる大きな喜びを、あなたがたに伝える。<sup>11</sup>きょうダビデの町に、あなたがたのために救主がお生れになった。このかたこそ主なるキリストである。"
+            read more: "素晴らしいクリスマスのお話を読む"
+            read about: "イエス・キリスト誕生のお話を読む"
+            totals since: "2014年12月1日以降のYouVersionビジター総数:"
+            total installs: "　スマートフォン及びタブレットへのインストール総数"
+            download: "無料聖書アプリをダウンロードする"
+            versions: "%{version_count} 種類以上の聖書訳が%{language_count} ヵ国語の言語で"
+            tagline: "どこに行く時も聖書と共に"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: 聖書アプリ"
             tagline: "<em>1億人から</em>始まります。"
