--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -167,6 +167,7 @@ ko:
     badges title: "배지"
     currently selected: "선택된 구절:"
     read reference: "%{reference} 읽기"
+    read chapter: "성경본문 보기"
     compare all versions: "모든 번역본 비교"
     link will be added: "추가 예정"
     my picture: "내 사진 바꾸기"
@@ -223,6 +224,7 @@ ko:
     note: "새 노트"
     selected: "선택"
     chapter: "장"
+    home: "홈"
     bible: "성경"
     notes title: "노트"
     friends: "내 친구"
@@ -1074,6 +1076,19 @@ ko:
         loading: "번역본 추가 로딩중 ..."
         load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
     campaigns: 
+        christmas: 
+            tracker title: "크리스마스 이야기 현황"
+            twitter text: "전 세상이 예수님의 성탄 에 대해서 얼마나 읽고 있는지 살펴보세요. 크리스마스 이야기를 현황 판에서 나누세요 @YouVersion: https://www.bible.com/christmas"
+            facebook text: "세상 방방곡곡에서 예수님의 탄생에 관해 읽는 분들과 크리스마스 현황판에 대해서 나누어보세요.교회 또는 집에서든, 사랑하는 분들과 함께든 아니면 개인 큐티 시간에서든, 우리를 위한 놀라운 하나님의 사랑에 대해서 묵상해봅시다."
+            verse: "<sup>10</sup> 천사가 그들에게 말하였다. &quot;두려워하지 말아라.  나는 온 백성에게 큰 기쁨이 될 소식을 너희에게 전하여 준다. <sup>11</sup> 오늘 다윗의 동네에서 너희에게 구주가 나셨으니, 그는 곧 그리스도 주님이시다.&quot;"
+            read more: "놀라운 크리스마스의 이야기를 읽어보세요."
+            read about: "예수님의 성탄에 대해서 읽어보세요."
+            totals since: "2014년 12월 1일 이후, YouVersion 총 설치수:"
+            total installs: "스마트폰이나 태블랫에 설치"
+            download: "무료 성경 앱을 다운로드하세요"
+            versions: "%{language_count} 언어로 된 %{version_count} 이상의 번역본"
+            tagline: "어느 곳에서나 여러분과 함께 하는 성경"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: 성경 앱"
             tagline: "<em>1억건 다운로드</em> 이제 시작입니다."
