--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -167,6 +167,7 @@ nl:
     badges title: "Medailles"
     currently selected: "Nu geselecteerd:"
     read reference: "%{reference} lezen"
+    read chapter: "Lees het hele hoofdstuk"
     compare all versions: "Alle vertalingen vergelijken"
     link will be added: "Wordt toegevoegd"
     my picture: "Mijn foto bijwerken"
@@ -223,6 +224,7 @@ nl:
     note: "Nieuwe notitie"
     selected: "Geselecteerd"
     chapter: "Hoofdstuk"
+    home: "Thuisscherm"
     bible: "Bijbel"
     notes title: "Notities"
     friends: "Vrienden"
@@ -1076,6 +1078,19 @@ nl:
         loading: "Meer Versies aan het laden..."
         load error: "Sorry, er ontstond een probleem bij het laden van meer versies. Sluit dit menu en heropen het om het opnieuw te proberen."
     campaigns: 
+        christmas: 
+            tracker title: "Kerstverhaal Volger"
+            twitter text: "Lees hoe de wereld leest over de geboorte van Jezus, Deel de Kerstverhaal Volger @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Deel de Kerstverhaal Volger terwijl wereldwijd mensen lezen over de geboorte van Jezus.  In de kerk of thuis, bij mensen van wie we houden of tijdens een rustig moment alleen, nemen we even pauze om na te denken over het wonder van Gods liefde voor ons."
+            verse: "<sup>10 </sup> De engel zei tegen hen:<br>“wees niet bang, want ik kom jullie goed nieuws brengen, dat het hele volk met grote blijdschap zal vervullen. <sup>11 </sup> Vandaag is in de stad van David jullie Redder geboren. Hij is de Messias, de Heer.”"
+            read more: "Lees het prachtige Kerstverhaal"
+            read about: "Lezen over de geboorte van Jezus"
+            totals since: "Aantal van YouVersion sinds 1 december 2014"
+            total installs: "Totaal aantal installaties op smartphones en tablets"
+            download: "Download de gratis Bijbel App"
+            versions: "Meer dan %{version_count} versies in %{language_count} talen"
+            tagline: "De Bijbel die overal met je mee gaat"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: De Bijbel app"
             tagline: "Het begint met <em>100 miljoen</em>"
