--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -167,6 +167,7 @@ pt-PT:
     badges title: "Medalhas"
     currently selected: "Atualmente Selecionado:"
     read reference: "Leia %{reference}"
+    read chapter: "Ler o capítulo completo"
     compare all versions: "Comparar Todas as Versões"
     link will be added: "Será Adicionado"
     my picture: "Atualizar a Minha Imagem"
@@ -223,6 +224,7 @@ pt-PT:
     note: "Nova Nota"
     selected: "Selecionado"
     chapter: "Capítulo"
+    home: "Início"
     bible: "Bíblia"
     notes title: "Notas"
     friends: "Amigos"
@@ -1076,6 +1078,19 @@ pt-PT:
         loading: "Descarregando mais versões ..."
         load error: "Desculpe, houve um problema ao descarregar mais versões. Feche este menu e tente novamente."
     campaigns: 
+        christmas: 
+            tracker title: "A História do Natal"
+            twitter text: "Veja o mundo a ler sobre o nascimento de Jesus. Partilhe o contador da História do Natal @YouVersion: https://www.bible.com/pt-PT/christmas"
+            facebook text: "Partilhe o contador da História do Natal à medida que pessoas ao redor do mundo lêem sobre o nascimento de Jesus.  Na igreja ou em casa, perto de pessoas que ama ou durante momentos de silêncio sozinho, façamos uma pausa para reflectir na maravilha do amor de Deus por nós."
+            verse: "<sup>10</sup> Mas o anjo disse-lhes,<br>“Não tenham medo!  Venho aqui trazer-vos uma boa nova que será motivo de alegria para todo o povo. <sup>11</sup> Pois nasceu hoje, na cidade de David, o vosso Salvador que é Cristo,o Senhor!”"
+            read more: "Leia a surpreendente História do Natal"
+            read about: "Quantidade de pessoas a ler sobre o nascimento de Jesus"
+            totals since: "Totais YouVersion desde 1 de Dezembro de 2014:"
+            total installs: "Downloads em smartphones e tablets"
+            download: "Transfira gratuitamente a App da Bíblia"
+            versions: "Mais de %{version_count} versões em %{language_count} idiomas"
+            tagline: "a Bíblia que vai consigo para todo lado"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: A app da Bíblia"
             tagline: "Tem início nos <em>100 milhões</em>"
