--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -167,6 +167,7 @@ ro:
     badges title: "Insigne"
     currently selected: "Selectat acum:"
     read reference: "Citește %{reference}"
+    read chapter: "Citește întreg capitolul"
     compare all versions: "Compară toate versiunile"
     link will be added: "Va fi adăugat"
     my picture: "Actualizează fotografia"
@@ -223,6 +224,7 @@ ro:
     note: "Notiță nouă"
     selected: "Selectate"
     chapter: "Capitolul"
+    home: "Acasă"
     bible: "Biblia"
     notes title: "Notițe"
     friends: "Prieteni"
@@ -1056,7 +1058,7 @@ ro:
     app errors: 
         404 plans explanation: "Cauți planul <a href='%{plan_path}'>%{title}</a>?"
         404 contact support: "Întâmpini probleme? Contactează <a href='%{support_url}'>echipa noastră de asistență</a>."
-        404 explanation: "Încearcă să reîncepi de aici <a href='%{reader_path}'>home page</a>. Nu merge nici așa? Contactează <a href='%{support_url}'>echipa de asistență</a>."
+        404 explanation: "Încearcă să reiei căutarea de la <a href='%{reader_path}'>pagina Acasă</a>. Nu merge nici așa? Contactează <a href='%{support_url}'>echipa de asistență</a>."
         404 message: "Ne pare rău, pagina pe care o cauți nu poate fi găsită."
         408 message: "Din păcate, serverele noastre nu au răspuns în timp util."
         408 explanation: "Am fost notificați și ne vom ocupa de toate problemele persistente în cel mai scurt timp. Acum încercăm să te ducem înapoi la planul tău de citire."
@@ -1078,6 +1080,19 @@ ro:
         loading: "Se încarcă mai multe versiuni..."
         load error: "S-a produs o eroare la încărcarea mai multor versiuni. Pentru a încerca din nou, închide și apoi redeschide acest meniu."
     campaigns: 
+        christmas: 
+            tracker title: "Pe Urmele CRĂCIUNULUI"
+            twitter text: "Urmărește o lume întreagă citind despre nașterea lui Isus. Distribuie Pe Urmele Crăciunului @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Distribuie Pe Urmele Crăciunului pe măsură ce oameni din întreaga lume citesc despre nașterea lui Isus.  La biserică sau acasă, lângă cei dragi sau într-un moment de singurătate, ne oprim să ne gândim la minunea dragostei lui Dumnezeu pentru noi."
+            verse: "<sup>10</sup> Dar îngerul le-a zis,<br>„Nu vă temeți. Vă aduc o veste bună, care va fi o mare bucurie pentru tot norodul. <sup>11</sup> Astăzi în cetetea lui David, vi s-a născut un Mântuitor; care este Hristos, Domnul.”"
+            read more: "Citește uimitoarea poveste a Crăciunului"
+            read about: "Lecturi despre Nașterea lui Isus"
+            totals since: "Totalul YouVersion începând cu 1 decembrie 2014:"
+            total installs: "Numărul total de instalări pe smartphone-uri și tablete"
+            download: "Descarcă gratuit aplicația Biblia"
+            versions: "Peste %{version_count} versiuni în %{language_count} limbi"
+            tagline: "Biblia care merge cu tine oriunde"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: Aplicația Biblia"
             tagline: "Începe cu <em>100 milioane</em>"
