--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -167,6 +167,7 @@ sk:
     badges title: "Odznaky"
     currently selected: "Momentálne označené:"
     read reference: "Čítať %{reference}"
+    read chapter: "Prečítajte si celú kapitolu"
     compare all versions: "Porovnať všetky preklady"
     link will be added: "- odkaz bude pridaný automaticky"
     my picture: "Aktualizovať môj obrázok"
@@ -223,6 +224,7 @@ sk:
     note: "Nová poznámka"
     selected: "Označené"
     chapter: "Kapitola"
+    home: "Domov"
     bible: "Biblia"
     notes title: "Poznámky"
     friends: "Priatelia"
@@ -1078,6 +1080,19 @@ sk:
         loading: "Načítava sa viac prekladov..."
         load error: "Prepáčte, nepodarilo sa načítať viac prekladov. Zavrite toto menu a otvorte ho znova."
     campaigns: 
+        christmas: 
+            tracker title: "Sledovanie Vianočného príbehu"
+            twitter text: "Sledujte ako svet číta o Ježišovom narodení. Zdieľajte Vianočný príbeh @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Zdieľajte sledovanie Vianočného príbehu s priateľmi z celého sveta a čítajte o Ježišovom narodení.  V cirkvi alebo doma, s milovanými ľuďmi alebo počas tichých chvíľ osamote, sa zastavíme a rozmýšľame nad zázrakom Božej lásky k nám."
+            verse: "<sup>10</sup> Ale anjel im povedal,<br>“Nebojte sa. Zvestujem vám veľkú radosť, ktorá bude patriť všetkým ľuďom: <sup>11</sup> Dnes sa vám v Dávidovom meste narodil Spasiteľ Kristus Pán.”"
+            read more: "Prečítajte si úžasný príbeh o Vianociach"
+            read about: "Čítanie o Ježišovom narodení"
+            totals since: "Štatistika YouVersion od 1. decembra 2014:"
+            total installs: "Inštalácií spolu na smartfónoch a tabletoch"
+            download: "Stiahnite si zadarmo Aplikáciu Biblia"
+            versions: "Vyše %{version_count} prekladov v %{language_count} jazykoch"
+            tagline: "Biblia, ktorá ide všade s vami"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Aplikácia Biblia"
             tagline: "Začína to <em>100 miliónmi</em>"
