--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -167,6 +167,7 @@ tl:
     badges title: "Mga Badge"
     currently selected: "Kasalukuyang Napili:"
     read reference: "Basahin %{reference}"
+    read chapter: "Basahin ang buong kabanata"
     compare all versions: "Ikumpara Lahat ng Bersyon"
     link will be added: "Maidaragdag"
     my picture: "I-update Ang Aking Larawan"
@@ -223,6 +224,7 @@ tl:
     note: "Bagong Tala"
     selected: "Napili"
     chapter: "Kabanata"
+    home: "Home"
     bible: "Bibliya"
     notes title: "Mga tala"
     friends: "Mga Kaibigan"
@@ -1076,6 +1078,19 @@ tl:
         loading: "Nag-lo-load ng Mas Marami pang Sipi..."
         load error: "Paumanhin, nagkaroon ng suliranin sa pagkuha ng iba pang sipi. Isara ang talang ito at subukang buksan muli."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Subaybayan ang mundong nagbabasa tungkol sa kapanganakan ni Hesus. Ibahagi ang Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Ibahagi ang Christmas Story Tracker kasabay nang pagbabasa ng mga tao tungkol sa kapanganakan ni Hesus.Sa simbahan at tahanan, kalapit ng ating mga mahal sa buhay o sa mga oras ng katahimikan na tayo'y nagiisa, tayo ay tumitigil sandali upang pagnilayan ang dakilang pag-ibig ng Diyos para sa atin."
+            verse: "<sup>10</sup> Ngunit sinabi ng anghel sa kanila,<br>“Huwag kayong matakot. Ako ay may dalang mabuting balita na magdudulot ng dakilang kasiyahan sa buong sanlibutan. <sup>11</sup> Ngayon sa bayan ni David ang Tagapag-ligtas ay isinilang; Siya ang Mesias, ang Panginoon.”"
+            read more: "Basahin ang kamangha-manghang kwento ng Pasko"
+            read about: "Ang mga Nagbabasa tungkol sa Pagsilang ni Hesus"
+            totals since: "Kabuuang bilang ng YouVersion mula December 1, 2014:"
+            total installs: "Kabuuang install sa mga smartphone at tablet"
+            download: "I-download ang libreng Bible App"
+            versions: "Mahigit %{version_count} na salin sa %{language_count} na wika"
+            tagline: "ang Bibliya na kasa-kasama mo kahit saan"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Ang Bible App"
             tagline: "Ito ay nagsisimula sa <em>100 milyon</em>"
