--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -82,7 +82,7 @@ af:
             title: "Dit begin met 100 Miljoen"
             description: "Die Bybel Toep is amper 'n 100 miljoen keer geinstalleer - wat 'n ongelooflike mylpaal.  Maar ons begin nou eers.  Laai die gratis Bybel Toep vandag af - en deel dan die toep met jou vriende.  Help ons om saam geskiedenis te maak."
         mobile: 
-            title: "Die Bybel Toep"
+            title: "Die Bybel App"
             description: "Lees God se Woord enige tyd, enige plek met behulp van die YouVersion Bybel App. Deel die Skrif met vriende, belig en boekmerk die gedeeltes, en skep `n daglikse gewoonte met Bybel Planne, Beskikbaar vir iOS, Android, Blackberry, Windows Foon en meer."
         site: 
             title: "Bybel.com"
@@ -167,6 +167,7 @@ af:
     badges title: "Kentekens"
     currently selected: "Huidige Keuse:"
     read reference: "Lees %{reference}"
+    read chapter: "Lees die hele hoofstuk"
     compare all versions: "Vergelyk Alle Weergawes"
     link will be added: "Sal Bygevoeg Word"
     my picture: "Verander My Foto"
@@ -223,6 +224,7 @@ af:
     note: "Nuwe Nota"
     selected: "Gekies"
     chapter: "Hoofstuk"
+    home: "Tuisblad"
     bible: "Bybel"
     notes title: "Notas"
     friends: "Vriende"
@@ -1076,6 +1078,19 @@ af:
         loading: "Besig om meer weergawes te laai..."
         load error: "Jammer, daar was 'n probleem met die laai van meer weergawes. Maak hierdie kieslys toe en heropen dit om weer te probeer."
     campaigns: 
+        christmas: 
+            tracker title: "Kersstorie Navolger"
+            twitter text: "Kyk hoe die wêreld lees aangaande die geboorte van Jesus. Deel die Kersverhaal navolger @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Deel die Kersverhaal Navolger soos mense rondom die wêreld aangaande die geboorte van Jesus lees.  In die Kerk of by die huis, naby mense waarvoor ons lief is of tydens 'n stil oomblik alleen, staan ons stil om die wonder van God se liefde vir ons te oordink."
+            verse: "<sup>10</sup> Maar die Engel het vir hulle gesê:<br>“Moenie bang wees nie. Ek bring vir julle goeie nuus wat groot blydskap vir alle mense sal bring. <sup>11</sup> Daar is vandag in die stad van Dawid vir julle 'n Verlosser gebore; Hy is die Gesalfde Een, die Here.&quot;"
+            read more: "Lees die fantastiese Kersverhaal"
+            read about: "Lees van die geboorte van Jesus."
+            totals since: "YouVersion totale sedert 1 Desember, 2014:"
+            total installs: "Totale installerings op \"smartfone\" en tablette"
+            download: "Laai die gratis Bybel App af"
+            versions: "Meer as %{version_count} vertalings in %{language_count} tale"
+            tagline: "die Bybel wat oral saam met jou gaan"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Die Bybel app"
             tagline: "Dit begin met<em>100 miljoen</em>"
