--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -167,12 +167,13 @@ cy:
     badges title: "Bathodynnau"
     currently selected: "Dewis Presennol:"
     read reference: "Darllen %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Cymharu Pob Fersiwn"
     link will be added: "Caiff Ei Ychwanegu"
     my picture: "Diweddaru Fy Llun"
     my notifications: "Delio â Hysbysiadau"
     my devices: "Dyfeisiadau a Gysylltwyd"
-    language name: "Saesneg"
+    language name: "Cymraeg"
     sign in: "Mewngofnodi"
     sign up: "Cofrestrwch"
     have an account: "Oes Cyfrif gennych yn barod ?"
@@ -223,6 +224,7 @@ cy:
     note: "Nodyn newydd"
     selected: "Dewiswyd"
     chapter: "Pennod"
+    home: "Home"
     bible: "Beibl"
     notes title: "Nodiadau"
     friends: "Friends"
@@ -772,14 +774,14 @@ cy:
         search: "Chwilio"
         search placeholder: "Chwiliwch Gynlluniau%{category}"
         subscribe to plan: "Dechrau'r Cynllun"
-        previous day: "PREV DAY"
-        next day: "NEXT DAY"
+        previous day: "Blaenorol"
+        next day: "Nesaf"
         reading completed _ mark and show next: "Nesaf: %{next_reference}"
         which reading: "%{current}o %{total}"
         done reading: "Wedi gorffen"
         no verses: "No verses for today"
         no content: "Does dim cynnwys wedi'i glustnodi am heddiw felly mae marc ‘wedi ei gwblhau’ arno."
-        read today: "This day’s reading"
+        read today: "Darlleniad Heddiw"
         devotional: "Defosiynol"
         completion status _ below percentage: "Cwblhawyd"
         current progress html: "Diwrnod <b>%{day}</b>o <b>%{total_days}</b>"
@@ -1084,6 +1086,19 @@ cy:
         loading: "Loading More Versions..."
         load error: "Sorry, there was a problem loading more versions. Close this menu and reopen to try again."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: The Bible app"
             tagline: "It starts with <em>100 million</em>"
