--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -167,6 +167,7 @@ es-ES:
     badges title: "Insignias"
     currently selected: "Seleccionado hoy:"
     read reference: "Lee %{reference}"
+    read chapter: "Lee el capítulo entero"
     compare all versions: "Comparar todas las versiones"
     link will be added: "Será agregado"
     my picture: "Actualizar mi foto"
@@ -223,6 +224,7 @@ es-ES:
     note: "Nueva nota"
     selected: "Seleccionado"
     chapter: "Capítulo"
+    home: "Página Principal"
     bible: "Biblia"
     notes title: "Notas"
     friends: "Amigos"
@@ -718,12 +720,12 @@ es-ES:
             readings 5 or more: "lecturas"
         stats: 
             friends reading: 
-                one: "%{count} friend subscribed to this plan"
-                other: "%{count} friends subscribed to this plan"
+                one: "%{count}amigos suscritos a este plan"
+                other: "%{count}amigos suscritos a este plan"
             friends completed: 
-                one: "%{count} friend has completed this plan"
-                other: "%{count} friends have completed this plan"
-            total completions: "Over %{count} completions"
+                one: "%{count} amigos completaron este plan"
+                other: "%{count} amigos completaron este plan"
+            total completions: "Alrededor de %{count} completados"
             view all: "Ver Todo"
             close: "Cerrado"
         settings: "Configuración"
@@ -1019,7 +1021,7 @@ es-ES:
                 now skipped: "Esta página será saltada."
             features: 
                 read heading: "Lee la Biblia."
-                read description: "Take your choice from <a href='%{versions_path}'>hundreds of Bible versions and languages</a>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
+                read description: "Elige entre <a href='%{versions_path}'>cientos de versiones de la Biblia y lenguas</a>. Compara dos versiones de punta a punta. Incluso puedes elegir la fuente y el tamaño de la misma. Haz tu experiencia online con la Biblia de la manera que te gusta."
                 study heading: "Estudia la Biblia."
                 study description: "<strong>Destaca</strong> en tu color favorito, <strong>marca</strong> tus versículos favoritos, y crea notas sobre lo que vas aprendiendo. No sólo pasas tiempo leyendo la Palabra de Dios, sino que además estás construyendo una historia de tu interacción con la Biblia."
                 subscribe heading: "Subscríbete a planes de la Biblia."
@@ -1076,6 +1078,19 @@ es-ES:
         loading: "Cargando más versiones..."
         load error: "Lo sentimos, ha ocurrido un problema al cargar más versiones. Cierra el menú y vuélvelo a abrir para intentarlo de nuevo."
     campaigns: 
+        christmas: 
+            tracker title: "Historias de Navidad"
+            twitter text: "Observa al mundo leer sobre el nacimiento de Jesús. Comparte la Historia de Navidad de @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Comparte la Historia de Navidad a la vez que gente de todo el mundo lee sobre el nacimiento de Jesús. En la iglesia o en casa, cerca de gente a la que quieres o durante un momento de tranquilidad, detengámonos para reflexionar sobre el milagro amor de Dios por nosotros."
+            verse: "<sup>10</sup> Pero el ángel les dijo, <br>“No temáis. Os traigo buenas nuevas que serán de gran gozo para todo el pueblo. <sup>11</sup> Hoy ha nacido, en la ciudad de David, un Salvador, que es Cristo el Señor.”"
+            read more: "Lee la increíble historia de la Navidad"
+            read about: "Lectura sobre el nacimiento de Jesús"
+            totals since: "Totales de YouVersion desde el 1 de Diciembre de 2014:"
+            total installs: "Instalaciones totales en smartphones y tabletas"
+            download: "Descarga la Aplicación de la Biblia gratis"
+            versions: "Alrededor de %{version_count} versiones en %{language_count} lenguas"
+            tagline: "La Biblia que va contigo a todos lados"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: La aplicación de la Biblia"
             tagline: "Arranca con <em>100 milliones</em>"
