--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -4,7 +4,7 @@ lv:
         formats: 
             votd: "%B %-d, %Y"
     counter: 
-        format: "999 999 999"
+        format: "999 999 999"
     social: 
         intro page: 
             main heading: "Saruna un Atklājumi"
@@ -167,6 +167,7 @@ lv:
     badges title: "Nozīmītes"
     currently selected: "Pašlaik izvēlēts:"
     read reference: "Lasi %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Salīdzināt visus tulkojumus"
     link will be added: "Tiks pievienots"
     my picture: "Mainīt attēlu"
@@ -223,6 +224,7 @@ lv:
     note: "Jauna piezīme"
     selected: "Izvēlēts"
     chapter: "Nodaļa"
+    home: "Home"
     bible: "Bībele"
     notes title: "Piezīmes"
     friends: "Draugi"
@@ -1078,6 +1080,19 @@ lv:
         loading: "Ielādē vairāk tulkojumus..."
         load error: "Atvainojamies, radās kļūme ielādējot citus tulkojumus. Mēģiniet vēlreiz, aiztaisot šo izvēlni un attaisot to no jauna."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Bībeles aplikācija"
             tagline: "Tas sākas ar <em>100 miljoniem</em>"
