--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -167,6 +167,7 @@ mn:
     badges title: "Тэмдэгтүүд"
     currently selected: "Одоогоор Сонгогдсон:"
     read reference: "%{reference} унших"
+    read chapter: "Бүлгийг бүтнээр нь унших"
     compare all versions: "Бүх Орчуулгууд Харьцуулах"
     link will be added: "Нэмэгдэх Болно"
     my picture: "Зургаа Шинэчлэх"
@@ -223,6 +224,7 @@ mn:
     note: "Шинэ Тэмдэглэл"
     selected: "сонгосон"
     chapter: "Бүлэг"
+    home: "Нүүр хуудас"
     bible: "Библи"
     notes title: "Тэмдэглэлүүд"
     friends: "Найзууд"
@@ -1076,6 +1078,19 @@ mn:
         loading: "Илүү Орчуулга Ачаалаж байна..."
         load error: "Уучлаарай, илүү орчуулга ачааллахад алдаа гарлаа. Энэ цэсийг хаагаад дахин нэвтрэх үү."
     campaigns: 
+        christmas: 
+            tracker title: "Христмасын Түүхийг Дагагч"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Христмасын тухай гайхалтай түүхийг унши"
+            read about: "Есүсийг хэрхэн төрсөн тухай унши"
+            totals since: "2014, Арван хоёрдугаар сарын 1нээс хойш YouVersion-д нийт:"
+            total installs: "Ухаалаг утас болон зөөврийн хэрэгслэлүүд дээр нийт татагдсан"
+            download: "Үнэгүй Библи Аппыг татаж авах"
+            versions: "%{language_count}хэл дээрхи %{version_count}гаруй орчуулгууд"
+            tagline: "Хаана ч таньтай хамт явах Библи"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Библи Апп"
             tagline: "<em>100 Саяаас</em> Эхэлдэг"
