--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -167,6 +167,7 @@ ru:
     badges title: "Значки"
     currently selected: "Выбрано:"
     read reference: "Читать %{reference}"
+    read chapter: "Читать полностью"
     compare all versions: "Посмотреть во всех переводах"
     link will be added: "будет добавлена"
     my picture: "Обновить фото"
@@ -223,6 +224,7 @@ ru:
     note: "Новая заметка"
     selected: "Выбранное"
     chapter: "Глава"
+    home: "Домой"
     bible: "Библия"
     notes title: "Заметки"
     friends: "Друзья"
@@ -1080,6 +1082,19 @@ ru:
         loading: "Загружаю список переводов..."
         load error: "Извините, нам не удалось загрузить список переводов. Закройте это меню и откройте его снова."
     campaigns: 
+        christmas: 
+            tracker title: "Трекер Рождественской Истории"
+            twitter text: "Наблюдайте, как мир читает о рождении Иисуса. Расскажите о трекере Рождественской Истории @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Делитесь трекером Рождественской истории, в то время как люди по всему миру читают о рождении Иисуса.  Где бы мы ни находились: в церкви или дома, с людьми, которых любим или в момент одиночества в тишине, — мы уделяем время, чтобы подумать о Божьей любви к нам."
+            verse: "<sup>10 </sup> И сказал им Ангел:<br>“Не бойтесь; я возвещаю вам великую радость, которая будет всем людям: <sup>11 </sup> ибо ныне родился вам в городе Давидовом Спаситель, Который есть Христос Господь”"
+            read more: "Читайте удивительную историю Рождества"
+            read about: "Чтение о рождении Иисуса"
+            totals since: "Всего отрывков прочитано, начиная с 1 декабря 2014:"
+            total installs: "Суммарное количество установок на мобильных устройствах"
+            download: "Загрузите бесплатное приложение \"Библия\""
+            versions: "Более %{version_count} переводов на %{language_count} языках"
+            tagline: "Библия, которая всегда с вами"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Приложение Библия"
             tagline: "Всё начинается со <em>100 млн</em>"
