Updated Smartling Strings

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -167,7 +167,7 @@ ca:
     badges title: "Insígnies"
     currently selected: "S'ha seleccionat:"
     read reference: "Llegeix %{reference}"
-    read chapter: "Read full chapter"
+    read chapter: "Llegeix el capítol sencer"
     compare all versions: "Compara totes les versions"
     link will be added: "Serà afegit/da"
     my picture: "Actualitza la meva foto"
