--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -1079,7 +1079,7 @@
         load error: "Et problem oppstod i forbindelse med nedlastning av flere oversettelser. Lukk denne menyen og åpne på nytt for å prøve igjen."
     campaigns: 
         christmas: 
-            tracker title: "Julehistorien er lest"
+            tracker title: "Juleevangelieteller"
             twitter text: "Se verden lese om Jesu fødsel. Del juleevangelietelleren @YouVersion: https://www.bible.com/christmas"
             facebook text: "Del juleevangelietelleren mens folk over hele verden leser om Jesu fødsel.  I kirken eller hjemme, sammen med folk vi er glad i eller i et stille øyeblikk alene. Vi stopper opp for å ta til oss det underet Guds kjærlighet er for oss."
             verse: "<sup>10</sup> Men engelen sa til dem,<br>“Frykt ikke! For se, jeg forkynner dere en stor glede - en glede for alt folket. <sup>11</sup> I dag er det født dere en frelser, som er Messias, Herren - i Davids by.”"
